--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,6 +110,135 @@ jobs:
       if: always()
       run: kill $ASCIIFRAME_PID || true
 
+  # Comprehensive integration tests using our new framework
+  testcontainers-integration:
+    name: Integration Tests (Testcontainers)
+    runs-on: ubuntu-latest
+    needs: test
+    strategy:
+      fail-fast: false
+      matrix:
+        test-type: [integration, installation, docker]
+    
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      
+    - name: Download build artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: jar-artifact
+        path: build/libs/
+        
+    - name: Set up JDK 24 (Temurin)
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '23'
+        cache: 'gradle'
+        
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+        
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+      
+    - name: Run ${{ matrix.test-type }} tests
+      run: |
+        case "${{ matrix.test-type }}" in
+          "integration")
+            ./gradlew integrationTest --no-daemon
+            ;;
+          "installation")
+            ./gradlew installationTest --no-daemon
+            ;;
+          "docker")
+            ./gradlew test --tests "*DockerInstallationTest" --no-daemon
+            ;;
+        esac
+      env:
+        TESTCONTAINERS_REUSE_ENABLE: true
+      
+    - name: Generate test summary
+      if: always()
+      run: |
+        echo "## ${{ matrix.test-type }} Test Results" >> $GITHUB_STEP_SUMMARY
+        
+        # Check if test reports exist
+        if [ -f "build/reports/integration-tests/INTEGRATION_TEST_SUMMARY.md" ]; then
+          cat "build/reports/integration-tests/INTEGRATION_TEST_SUMMARY.md" >> $GITHUB_STEP_SUMMARY
+        else
+          echo "Test reports not found or tests did not run." >> $GITHUB_STEP_SUMMARY
+        fi
+      
+    - name: Upload ${{ matrix.test-type }} test reports
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: ${{ matrix.test-type }}-test-reports
+        path: |
+          build/reports/tests/
+          build/reports/integration-tests/
+          build/test-results/
+        retention-days: 7
+
+  # Installation validation tests
+  installation-validation:
+    name: Installation Validation Tests
+    runs-on: ubuntu-latest
+    needs: test
+    
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      
+    - name: Download build artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: jar-artifact
+        path: build/libs/
+        
+    - name: Set up JDK 24 (Temurin)
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '23'
+        cache: 'gradle'
+        
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+        
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+      
+    - name: Run installation tests
+      run: ./gradlew installationTest --no-daemon
+      env:
+        TESTCONTAINERS_REUSE_ENABLE: true
+      
+    - name: Upload installation test reports
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: installation-test-reports
+        path: |
+          build/reports/integration/
+          build/test-artifacts/
+        retention-days: 7
+        
+    - name: Run shell-based installation tests
+      run: |
+        cd testing/installation
+        ./scripts/test-installation.sh --docker-only
+      
+    - name: Upload shell test logs
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: shell-installation-logs
+        path: /tmp/asciiframe-test-*/test.log
+        retention-days: 7
+
   docker-test:
     name: Docker Test
     runs-on: ubuntu-latest
