fix: Resolve CI failures - port conflicts, Docker images, and package issues
- Fix Kroki port conflict: 8000 -> 8001 to avoid CI port allocation errors
- Fix Java version consistency: Use Java 23 across all Docker files and tests
- Replace non-existent openjdk:23-jdk-slim with eclipse-temurin:23-jre-alpine
- Fix Alpine package: openjdk21-jre -> openjdk21-jre-headless + docker-cli-compose -> docker-compose
- Fix CentOS package: Install docker-compose via pip3 since it's not available in dnf

These changes address:
- Smoke test port binding failures (Kroki 8000 -> 8001)
- Integration test Docker image pulling failures
- Installation test package installation failures on Alpine and CentOS

--- a/testing/installation/docker/Dockerfile.alpine
+++ b/testing/installation/docker/Dockerfile.alpine
@@ -8,9 +8,9 @@ RUN apk add --no-cache \
     git \
     unzip \
     bash \
-    openjdk21-jre \
+    openjdk21-jre-headless \
     docker \
-    docker-cli-compose
+    docker-compose
 
 # Create test user (non-root)
 RUN adduser -D -s /bin/bash testuser
