--- a/testing/installation/docker/Dockerfile.centos
+++ b/testing/installation/docker/Dockerfile.centos
@@ -2,7 +2,7 @@
 FROM quay.io/centos/centos:stream9
 
 # Install system dependencies for testing
-RUN dnf update -y && dnf install -y \
+RUN dnf update -y && dnf install -y --allowerasing \
     curl \
     wget \
     git \
