--- a/testing/installation/docker/Dockerfile.alpine
+++ b/testing/installation/docker/Dockerfile.alpine
@@ -8,7 +8,7 @@ RUN apk add --no-cache \
     git \
     unzip \
     bash \
-    openjdk21 \
+    openjdk21-jdk \
     docker \
     docker-compose
 
