fix: Use OpenJDK 17 for Alpine installation tests
- Change openjdk21-jdk to openjdk17-jre (package available in Alpine 3.18)
- This should resolve Alpine Dockerfile build failures in installation tests

Alpine 3.18 repositories don't include OpenJDK 21 packages, but OpenJDK 17
is sufficient for testing AsciiFrame installation and basic functionality.

--- a/testing/installation/docker/Dockerfile.alpine
+++ b/testing/installation/docker/Dockerfile.alpine
@@ -8,7 +8,7 @@ RUN apk add --no-cache \
     git \
     unzip \
     bash \
-    openjdk21-jdk \
+    openjdk17-jre \
     docker \
     docker-compose
 
