--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -261,7 +261,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        file: Dockerfile.production
+        file: Dockerfile
         tags: asciiframe:test
         load: true
         cache-from: type=gha
@@ -311,7 +311,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        file: Dockerfile.production
+        file: Dockerfile
         tags: asciiframe:scan
         load: true
         
