--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -23,10 +23,43 @@ env:
   INSTALL_MODES: ${{ github.event.inputs.test_modes || 'standalone docker' }}
 
 jobs:
+  # Build JAR first
+  build-jar:
+    name: Build JAR for Testing
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Setup JDK 23 (Temurin)
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '23'
+        cache: 'gradle'
+        
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+        
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+      
+    - name: Build JAR
+      run: ./gradlew clean shadowJar --no-daemon
+      
+    - name: Upload JAR artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: asciiframe-test-jar
+        path: build/libs/app-fat.jar
+        retention-days: 1
+
   # Matrix job for testing different platforms
   test-installation:
     name: Test Installation (${{ matrix.platform }})
     runs-on: ubuntu-latest
+    needs: build-jar
     strategy:
       fail-fast: false
       matrix:
@@ -35,6 +68,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      
+    - name: Download JAR artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: asciiframe-test-jar
+        path: testing/installation/fixtures/
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
